--- a/index.html
+++ b/index.html
@@ -159,12 +159,8 @@
                         <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">關於</h1>
                         <!-- <p class="wow fadeInDown" data-wow-delay="0.2s">  -->
                         <p class="justify" data-wow-delay="0.2s" line-height: 2;>
-                            語言，有趣且迷人。
-                            以科學方法與精神探究語言的語言學/語言科學，在台灣很可惜卻不是中學基礎教育的一環。
-                            <a href="https://lope.linguistics.ntu.edu.tw/ioltw/zh/"
-                                target="_blank">台灣語奧</a>希望藉由舉辦【語言科學科展】的方式，
-                            讓喜歡探究語言的中學生（國一到高三），有機會來先體驗與學習，快來加入我們，分享給我們妳/你的發現！
-                            決選獲獎者，更可直接取得2024台灣語奧一階國手的資格！
+                            語言，有趣且迷人。因著語言，我們得以創造歷史文化；因著語言，我們得以建構科技文明。正因如此，國際語言學奧林匹亞競賽每年邀集來自世界各地近 40 國數百名中學生，一起以科學方法與實證精神，探究語言的形態、結構、運用與邏輯。<a href="https://lope.linguistics.ntu.edu.tw/ioltw/zh/"
+                            target="_blank">台灣語奧</a>自 2013 年成立以來，年年屢創佳績，累積至今已獲 3 面金牌、12 面銀牌、9 面銅牌及 15 次佳作，可見台灣雖小，但語言科學的人才能量卻相當豐沛。有鑑於台灣中學教育欠缺語言邏輯思維訓練，台灣語奧希望藉由舉辦「語言科學科展」，讓喜歡探究語言奧秘的中學生（國一到高三），有機會搶先體驗語言邏輯之美。歡迎有天份有想法的你加入我們的行列，跟我們分享你在語言裡的最新發現！參加語言科學科展，不僅可展現天賦，入選決賽且表現表異者，更有機會直接取得 2024 台灣語奧一階國手的資格喔！不要再猶豫了，年輕熱血的你，趕快來報名吧！
                         </p>
                     </div>
                 </div>
@@ -179,7 +175,7 @@
                             <h3 class="Important"><a href="">重要日期</a></h3>
                             <ul class="Important">
                                 <li><b>2024 年 9 月 2 日</b> 前完成投稿意願表達：填寫報名表單並完成繳費</li>
-                                <li><b>2024 年 9 月 16 日</b> 於 23:59 前將作品上傳至<a href="https://forms.gle/xbW2q63NAKn3nWqY6"
+                                <li><b>2024 年 9 月 16 日</b> 於 23:59 前將作品上傳至<a href="https://forms.gle/RfREau7jJHcCtSZEA"
                                         target="_blank">投稿表單</a></li>
                                 <li><b>2024 年 10 月 1 日</b> FB粉專 ＆ email 公佈錄取通知</li>
                                 <li><b>2024 年 10 月 19 日</b> 到台灣語言學學會年度大會發表海報，參加決選</li>
@@ -217,7 +213,7 @@
                                 <p>快來報名科展把你的發現分享給大家！</p>
                                 <div class="blankDiv"></div>
                                 <p>歡迎點選以下連結：</p>
-                                <p>立即報名：<a href="https://forms.gle/Lbq7RdE8xuJbrC9d6/" target="_blank">【 報名表單 】</a></p>
+                                <p>立即報名：<a href="https://forms.gle/LX84MHNY9jFMNgZA8" target="_blank">【 報名表單 】</a></p>
                                 <p>參賽簡章：<a href="簡章.pdf" target="_blank">【 2024第三屆臺灣中學生語言科學科展簡章 】</a></p>
                             </div>
                         </div>
@@ -284,7 +280,7 @@
 
             <h5>決選流程</h5>
             <p class="justify">
-                10/1 公告與電郵決選錄取通知。準備製作海報（或投影片、裝置、遊戲器具等），於 10/19 親自到台灣語言學學會年度大會（台灣大學）展演，由評審老師決選至多 8 名獲獎。
+                10/1 公告與電郵決選錄取通知。準備製作海報（或投影片、裝置、遊戲器具等），於 10/19 親自到台灣語言學學會年度大會（清華大學）展演，由評審老師決選至多 8 名獲獎。
             </p>
 
 
@@ -687,11 +683,11 @@
                         <div class="row">
                             <div class="photo">
                                 <a>
-                                    <img src="assets/img/organization/Shukai-Hsieh.png">
+                                    <img src="assets/img/organization/Janice-Fon.png">
                                 </a>
                             </div>
                             <ul>
-                                <li class="name">謝舒凱</li>
+                                <li class="name">馮怡蓁</li>
                                 <li>國立台灣大學語言學研究所</li>
                             </ul>
                         </div>
@@ -700,39 +696,9 @@
                             <h3>評審老師</h3>
                         </div>
                         <div class="row">
-                            <div class="photo">
-                                <a>
-                                    <img src="assets/img/organization/ChiaLin-Lee.png">
-                                </a>
-                            </div>
                             <ul>
-                                <li class="name">李佳霖</li>
-                                <li>國立台灣大學語言學研究所</li>
-                            </ul>
-                        </div>
-
-
-                        <div class="row">
-                            <div class="photo">
-                                <a>
-                                    <img src="assets/img/organization/ChenHao-Chiu.png">
-                                </a>
-                            </div>
-                            <ul>
-                                <li class="name">邱振豪</li>
-                                <li>國立台灣大學語言學研究所</li>
-                            </ul>
-                        </div>
-
-                        <div class="row">
-                            <div class="photo">
-                                <a>
-                                    <img src="assets/img/organization/Janice-Fon.png">
-                                </a>
-                            </div>
-                            <ul>
-                                <li class="name">馮怡蓁</li>
-                                <li>國立台灣大學語言學研究所</li>
+                                <li class="name">待訂</li>
+                                <li>待訂</li>
                             </ul>
                         </div>
 
@@ -873,30 +839,23 @@
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.3977015654555!2d121.54106397409248!3d25.020574038834397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442aa25f637cbdd%3A0x706ae31088a51921!2z5ZyL56uL6Ie654Gj5aSn5a245rOV5b6L5a246Zmi6ZyW5r6k6aSo!5e0!3m2!1szh-TW!2stw!4v1689307951276!5m2!1szh-TW!2stw"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <!-- <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.799869550961!2d121.51849201509086!3d25.040864944170007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a976bd037867%3A0xc0e409057d87cc7e!2sNTUH%20International%20Convention%20Center%20and%20Medical%20Research%20Building%2C%20No.%202%E8%99%9F%2C%20Xuzhou%20Rd%2C%20Zhongzheng%20District%2C%20Taipei%20City%2C%20Taiwan%20100!5e0!3m2!1sen!2shk!4v1656916742805!5m2!1sen!2shk"
-                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4146.266143969868!2d120.96221229052385!3d24.793207452989478!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346835ed482ce799%3A0xf0c152b1ced03f19!2sNational%20Tsing%20Hua%20University%20Nanda%20Campus!5e0!3m2!1sen!2sus!4v1719991310723!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-lg-6 mapDetail">
                     <ul>
                         <li>
-                            <h5>國立臺灣大學法律學院霖澤館 <br />National Taiwan University</h5>
+                            <h5>國立清華大學南大校區行政大樓五樓第三會議室 <br />National Tsing Hua University</h5>
                         </li>
-                        <li>Phone: 02-33663366</li>
+                        <li>Phone: 03-5715131</li>
                         <li>Google Map: <a
-                                href="https://goo.gl/maps/WRWoAbW7aVWQK9r4A">https://goo.gl/maps/WRWoAbW7aVWQK9r4A</a>
+                                href="https://maps.app.goo.gl/W54Wv73H6ErtoqPQA">https://maps.app.goo.gl/W54Wv73H6ErtoqPQA</a>
                         </li>
-                        <li>Address: 106台北市大安區羅斯福路四段1號</li>
-                        <!-- <li>Contact Us: <a href="mailto:rocling2021@gmail.com">rocling2022@gmail.com</a></li> -->
+                        <li>Address: 30013 新竹市東區光復路二段101號</li>
                     </ul>
                 </div>
             </div>
         </div>
-    </section>
+    </section>    
     <!-- Map Section End -->
 
     <!-- Counter Area Start-->
@@ -908,7 +867,7 @@
                     <div class="counter wow fadeInRight" data-wow-delay="0.3s">
                         <div class="icon"><i class="lni-map"></i></div>
                         <p>NCL2024/TOL2025</p>
-                        <span>Taipei city, Taiwan</span>
+                        <span>Hsinchu city, Taiwan</span>
                     </div>
                 </div>
                 <!-- Counter Item -->
