fixed typo and updated the organization part

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 href="https://lope.linguistics.ntu.edu.tw/ioltw/zh/" target="_blank">台灣語奧</a>自 2013
                             年成立以來，年年屢創佳績，累積至今已獲 3 面金牌、12 面銀牌、9 面銅牌及 15
                             次佳作，可見台灣雖小，但語言科學的人才能量卻相當豐沛。有鑑於台灣中學教育欠缺語言邏輯思維訓練，台灣語奧希望藉由舉辦「語言科學科展」，讓喜歡探究語言奧秘的中學生（國一到高三），有機會搶先體驗語言邏輯之美。歡迎有天份有想法的你加入我們的行列，跟我們分享你在語言裡的最新發現！參加語言科學科展，不僅可展現天賦，入選決賽且表現表異者，更有機會直接取得
-                            2024 台灣語奧一階國手的資格喔！不要再猶豫了，年輕熱血的你，趕快來報名吧！
+                            2025 台灣語奧一階國手的資格喔！不要再猶豫了，年輕熱血的你，趕快來報名吧！
                         </p>
                     </div>
                 </div>
@@ -700,12 +700,29 @@
                             <h3>評審老師</h3>
                         </div>
                         <div class="row">
+                            <div class="photo">
+                                <a>
+                                    <img src="assets/img/organization/ChiaLin-Lee.png">
+                                </a>
+                            </div>
                             <ul>
-                                <li class="name">待訂</li>
-                                <li>待訂</li>
+                                <li class="name">李佳霖</li>
+                                <li>國立台灣大學語言學研究所</li>
                             </ul>
                         </div>
-
+                        
+                        
+                        <div class="row">
+                            <div class="photo">
+                                <a>
+                                    <img src="assets/img/organization/ChenHao-Chiu.png">
+                                </a>
+                            </div>
+                            <ul>
+                                <li class="name">邱振豪</li>
+                                <li>國立台灣大學語言學研究所</li>
+                            </ul>
+                        </div> 
                         <br>
                         <!--<div class="colmun-title">
                             <h3>組織委員</h3>
