--- a/index.html
+++ b/index.html
@@ -868,13 +868,14 @@
                 <div class="col-lg-6 mapDetail">
                     <ul>
                         <li>
-                            <h5>國立清華大學南大校區行政大樓五樓第三會議室 <br />National Tsing Hua University</h5>
+                            <h5>國立清華大學南大校區 <br />National Tsing Hua University</h5>
                         </li>
                         <li>Phone: 03-5715131</li>
                         <li>Google Map: <a
                                 href="https://maps.app.goo.gl/W54Wv73H6ErtoqPQA">https://maps.app.goo.gl/W54Wv73H6ErtoqPQA</a>
                         </li>
                         <li>Address: 30013 新竹市東區光復路二段101號</li>
+                        <li>Time: 10/19/2024, 15:30–18:00</li>
                     </ul>
                 </div>
             </div>
@@ -899,7 +900,7 @@
                     <div class="counter wow fadeInRight" data-wow-delay="0.6s">
                         <div class="icon"><i class="lni-timer"></i></div>
                         <p>October 19, 2024</p>
-                        <span>09:00 AM – 05:00 PM</span>
+                        <span>15:30 – 18:00</span>
                     </div>
                 </div>
                 <!-- Counter Item -->
