--- a/index.html
+++ b/index.html
@@ -664,6 +664,115 @@
                 </div>
 
     </section>
+    <section id="works2024" class="section-padding" style="background: #f3f4f3;">
+        <div class="container">
+            <div class="row pd15">
+                <div class="col-12">
+                    <div class="section-title-header text-center">
+                        <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">第三屆得獎作品</h1>
+                    </div>
+                </div>
+
+                <div class="blankDiv"></div>
+                <div class="col-md-6 col-lg-4 col-xs-12 wow fadeInRight" data-wow-delay="0.3s">
+                    <div class="video">
+                        <img class="img-fluid about-item" src="assets/FinalWorks_2024/202401.png">
+                        <div class="blankDiv"></div>
+                    </div>
+
+                    <div>
+                        <ul class="list-specification">
+                            <li><i class="lni-check-mark-circle"></i>作者：⿈韻安 </li>
+                            <li><i class="lni-check-mark-circle"></i>學校：台北市⽴第⼀⼥⼦⾼級中學</li>
+                            <li><i class="lni-check-mark-circle"></i>題目：<a href="assets/FinalWorks_2024/202401.pdf">Café vs Coffee Shop: A Sociolinguistic Approach to Investigating How Perceptions of French Loanwords Relate to Perceptions of the French Culture</a></li>
+                        </ul>
+                    </div>
+                    <div class="blankDiv"></div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 col-xs-12 wow fadeInRight" data-wow-delay="0.3s">
+                    <div class="video">
+                        <img class="img-fluid about-item" src="assets/FinalWorks_2024/202402.png">
+                        <div class="blankDiv"></div>
+                    </div>
+
+                    <div>
+                        <ul class="list-specification">
+                            <li><i class="lni-check-mark-circle"></i>作者：林宥萱 </li>
+                            <li><i class="lni-check-mark-circle"></i>學校：台北市立景美女子高級中學</li>
+                            <li><i class="lni-check-mark-circle"></i>題目：<a
+                                    href="assets/FinalWorks_2024/202402.pdf">“This is. It smiles, but it’s way sadder than” The Meaning Distinctions between Pleading Face and Face Holding Back Tears in Taiwan</a></li>
+                        </ul>
+                    </div>
+                    <div class="blankDiv"></div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 col-xs-12 wow fadeInRight" data-wow-delay="0.3s">
+                    <div class="video">
+                        <img class="img-fluid about-item" src="assets/FinalWorks_2024/202403.png">
+                        <div class="blankDiv"></div>
+                    </div>
+
+                    <div>
+                        <ul class="list-specification">
+                            <li><i class="lni-check-mark-circle"></i>作者：裔昭德 </li>
+                            <li><i class="lni-check-mark-circle"></i>學校：台北美國學校</li>
+                            <li><i class="lni-check-mark-circle"></i>題目：<a
+                                    href="assets/FinalWorks_2024/202403.pdf">Why Do They Sound Different?－Variant Transliterations of Character’s Names in Japanese Fantasy Anime into Mandarin Chinese</a></li>
+                        </ul>
+                    </div>
+                    <div class="blankDiv"></div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 col-xs-12 wow fadeInRight" data-wow-delay="0.3s">
+                    <div class="video">
+                        <img class="img-fluid about-item" src="assets/FinalWorks_2024/202404.png">
+                        <div class="blankDiv"></div>
+                    </div>
+
+                    <div>
+                        <ul class="list-specification">
+                            <li><i class="lni-check-mark-circle"></i>作者：黃姵穎 & 陳閲夏 </li>
+                            <li><i class="lni-check-mark-circle"></i>學校：康橋國際學校秀岡校區 & 臺北市立松山高級中學</li>
+                            <li><i class="lni-check-mark-circle"></i>題目：<a href="assets/FinalWorks_2024/202404.pdf">Age Difference in Stereotypical Semantic Activation: A Priming Study </a></li>
+                        </ul>
+                    </div>
+                    <div class="blankDiv"></div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 col-xs-12 wow fadeInRight" data-wow-delay="0.3s">
+                    <div class="video">
+                        <img class="img-fluid about-item" src="assets/FinalWorks_2024/202405.png">
+                        <div class="blankDiv"></div>
+                    </div>
+
+                    <div>
+                        <ul class="list-specification">
+                            <li><i class="lni-check-mark-circle"></i>作者：高敏瑄 </li>
+                            <li><i class="lni-check-mark-circle"></i>學校：康橋國際學校秀岡校區</li>
+                            <li><i class="lni-check-mark-circle"></i>題目：<a href="assets/FinalWorks_2024/202405.pdf">Communication Effectiveness and Respect: Analyzing the Impact of Acoustic Features on Voice Preferences of Elderly Adults</a></li>
+                        </ul>
+                    </div>
+                    <div class="blankDiv"></div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 col-xs-12 wow fadeInRight" data-wow-delay="0.3s">
+                    <div class="video">
+                        <img class="img-fluid about-item" src="assets/FinalWorks_2024/202406.png">
+                        <div class="blankDiv"></div>
+                    </div>
+
+                    <div>
+                        <ul class="list-specification">
+                            <li><i class="lni-check-mark-circle"></i>作者：Brian Wu & Po-Sen Wang </li>
+                            <li><i class="lni-check-mark-circle"></i>學校：台北市私立復興實驗高級中學 & 亞太美國學校</li>
+                            <li><i class="lni-check-mark-circle"></i>題目：<a href="assets/FinalWorks_2024/202406.pdf">Filling the Silence: How Mandarin Speakers Cope with Tip-of-the-Tongue Phenomenon</a></li>
+                        </ul>
+                    </div>
+                    <div class="blankDiv"></div>
+                </div>
+
+    </section>
     <!-- Works End -->
 
 
