--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link pt20" href="#works">
+                            <a class="nav-link pt20" href="#works2022">
                                 作品
                             </a>
                         </li>
@@ -102,7 +102,7 @@
                     <a class="page-scroll" href="#gallery">投件</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#works">作品</a>
+                    <a class="page-scroll" href="#works2022">作品</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#organization">組織</a>
