--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <p class="fadeInUp wow" data-wow-delay=".6s">The 3rd High School Language Science Fair in Taiwan
                         </p>
                         <h1 class="wow fadeInDown heading" data-wow-delay=".4s">第三屆臺灣中學生語言科學科展</h1>
-                        <h3 class="fadeInUp wow" data-wow-delay=".6s">10 月 19 日, 2024 </h3>
+                        <h3 class="fadeInUp wow" data-wow-delay=".6s">2024 年 10 月 19 日 </h3>
                     </div>
                 </div>
 
